# gdpr-obfuscator

./: .bandit  .gitignore  DEPLOYMENT.md  EXTENSION_PLAN.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-runtime.txt  requirements.txt  test-event-custom.json
.github/workflows/: ci.yml
scripts/: build_lambda.sh
src/gdpr_obfuscator/: cli.py  format_adapters.py  handler.py  lambda_entry.py  obfuscator.py  s3_adapter.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_format_adapters.py  test_handler.py  test_obfuscator.py  test_s3_adapter.py
tools/: generate_test_data.py
