[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdpr-obfuscator"
version = "0.1.0"
description = "GDPR Obfuscator MVP - streaming CSV obfuscation"
authors = [{ name = "Oleksii Kulykov" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
# Allow Any types (less strict for MVP)
disallow_any_explicit = false
disallow_any_generics = false

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true